Added some more comments for myself

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8185e543",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Perceptron:\n",
-    "    #Initializing the Perceptron class\n",
+    "    #Initializing the Perceptron class - like a constructor\n",
     "    def __init__(self, n_inputs, learning_rate=0.1):\n",
     "        \"\"\"\n",
     "        Initialize the Perceptron.\n",
@@ -42,15 +42,22 @@
     "        n_inputs: Number of input features\n",
     "        learning_rate: Learning rate for weight updates\n",
     "        \"\"\"\n",
+    "        #We set up the initial weights and bias randomly\n",
+    "        #Weights = the connections between inputs and the neuron - the values that get multiplied by the inputs\n",
+    "        #Bias = an additional parameter that allows us to shift the activation function\n",
+    "        #Learning rate = the learning rate\n",
     "        self.bias = np.random.uniform(-0.5, 0.5)\n",
     "        self.learning_rate = learning_rate\n",
     "        self.weights = np.random.uniform(-0.5, 0.5, n_inputs)\n",
     "    \n",
     "    #Defining the step function\n",
+    "    #Step Function: this function is used to determine the output class based on the weighted sum of inputs\n",
+    "    #Think of it like a \"yes/no\" decision boundary or analogous to a light switch that turns on (1) or off (0) based on the input\n",
     "    def step_function(self, x):\n",
     "        return 1 if x >= 0 else 0\n",
     "    \n",
     "    #Predict Method\n",
+    "    #Make a prediction for given inputs\n",
     "    def predict(self, inputs):\n",
     "        \"\"\"\n",
     "        Make a prediction for given inputs.\n",
@@ -61,10 +68,12 @@
     "        Returns:\n",
     "        Predicted class (0 or 1)\n",
     "        \"\"\"\n",
+    "        #We add up the weighted inputs and bias, then apply the step function to get the output\n",
     "        weighted_sum = np.dot(inputs, self.weights) + self.bias\n",
     "        return self.step_function(weighted_sum)\n",
     "\n",
     "    #Train Method\n",
+    "    #Meant to train the perceptron using the perceptron learning rule\n",
     "    def train(self, X, y, epochs, verbose=True):\n",
     "        \"\"\"\n",
     "        Train the perceptron using the perceptron learning rule.\n",
@@ -89,6 +98,8 @@
     "        # Store initial weights\n",
     "        history.append((self.weights.copy(), self.bias))\n",
     "\n",
+    "        #We cycle through the epochs to train the perceptron\n",
+    "        #Epochs = complete passes through the training dataset\n",
     "        for epoch in range(epochs):\n",
     "            total_error = 0\n",
     "\n",
@@ -104,13 +115,8 @@
     "                self.weights += self.learning_rate * error * X[i]\n",
     "                self.bias += self.learning_rate * error\n",
     "\n",
-    "            # Store weights after this epoch\n",
+    "            #Store weights after this epoch\n",
     "            history.append((self.weights.copy(), self.bias))\n",
-    "\n",
-    "            #tore weights after this epoch\n",
-    "            # TODO: add code here to store weights after each epoch in a list\n",
-    "            ## See hint in the markdown cell above\n",
-    "\n",
     "\n",
     "            if verbose:\n",
     "                print(f\"Epoch {epoch + 1}: weights = {self.weights},bias = {self.bias:.4f}, errors = {total_error}\")\n",
@@ -185,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "757e9f95",
    "metadata": {},
    "outputs": [
@@ -219,17 +225,17 @@
     }
    ],
    "source": [
-    "# Create perceptron\n",
+    "#Create perceptron\n",
     "perceptron_and = Perceptron(n_inputs=2, learning_rate=0.1)\n",
     "\n",
     "print(\"Initial weights:\", perceptron_and.weights)\n",
     "print(\"Initial bias:\", perceptron_and.bias)\n",
     "print(\"\\nTraining...\\n\")\n",
     "\n",
-    "# Train (store the history for later visualisation)\n",
+    "#Train (store the history for later visualisation)\n",
     "history_and = perceptron_and.train(X_and, y_and, epochs=10)\n",
     "\n",
-    "# Test on all inputs\n",
+    "#Test on all inputs\n",
     "print(\"\\nTesting AND perceptron:\")\n",
     "print(\"-\" * 40)\n",
     "all_correct = True\n",
@@ -254,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "20720783",
    "metadata": {},
    "outputs": [
@@ -270,7 +276,7 @@
     }
    ],
    "source": [
-    "# Plotting function\n",
+    "#Plotting function\n",
     "def plot_decision_boundary(X, y, weights, bias, title=\"Decision Boundary\", ax=None):\n",
     "   \"\"\"\n",
     "   Plot data points and decision boundary.\n",
@@ -339,12 +345,12 @@
    "id": "720c4d4d",
    "metadata": {},
    "source": [
-    "### **Animating the Learning Process**"
+    "### Animating the Learning Process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1ccc073f",
    "metadata": {},
    "outputs": [
@@ -376,7 +382,7 @@
     }
    ],
    "source": [
-    "# Visualise decision boundary evolution across epochs\n",
+    "#Visualise decision boundary evolution across epochs\n",
     "def plot_training_evolution(X, y, history, title_prefix=\"\"):\n",
     "    \"\"\"\n",
     "    Plot decision boundary evolution across training epochs.\n",
@@ -419,7 +425,7 @@
    "id": "abe8518b",
    "metadata": {},
    "source": [
-    "### **Displaying Weight Updates Table**"
+    "### Displaying Weight Updates Table"
    ]
   },
   {
