Added some explanation comments for myself to the top of the code

--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -5,7 +5,7 @@
    "id": "c1dd25d6",
    "metadata": {},
    "source": [
-    "# **Lab 1 Perceptions and Linear Separability**\n",
+    "# **Lab 1 Perceptrons and Linear Separability**\n",
     "This lab is meant to demonstrate:\n",
     "1. Implement a Rosenblatt perceptron from scratch in Python\n",
     "2. Train a perceptron to learn the logical AND and OR operations\n",
@@ -36,7 +36,36 @@
    "id": "7cbac6c2",
    "metadata": {},
    "source": [
-    "## **Exercise 1 - Creating a Perceptron**"
+    "## **Exercise 1 - Creating a Perceptron**\n",
+    "**What is a Perceptron?**\n",
+    "A perceptron is the simplest, foundational building block of an artificial neural network, functioning as a linear binary classifier to categorize data into one of two classes - on/off, yes/no, 0/1.\n",
+    "\n",
+    "Consists of a single neuron with adjustable synaptic weights and a hard limiter for\n",
+    "classification.\n",
+    "\n",
+    "Overall aim is to classify inputs\n",
+    "The model consists of:\n",
+    "- Inputs (features)\n",
+    "- Weights (synaptic weights)\n",
+    "- Bias (threshold)\n",
+    "- Activation function (hard limiter)\n",
+    "\n",
+    "Model consists of a linear combiner and a hard limiter\n",
+    "The weighted sum of imputs is applied to the hard limiter to produce binary output\n",
+    "- If the weighted sum is greater than or equal to the threshold, output is 1\n",
+    "- If the weighted sum is less than the threshold, output is 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6c8c958",
+   "metadata": {},
+   "source": [
+    "#### Methods Explained\n",
+    "- `__init__(self, input_size, learning_rate=0.1)`: Initializes the perceptron with random weights and a specified learning rate.\n",
+    "- `step_function(self, x)`: Implements the hard limiter activation function.\n",
+    "- `predict(self, x)`: Computes the weighted sum of inputs and applies the activation function to produce the output.\n",
+    "- `train(self, X, y, epochs)`: Trains the perceptron using the provided training data for a specified number of epochs."
    ]
   },
   {
