--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -186,7 +186,10 @@
    "id": "8bdb29b7",
    "metadata": {},
    "source": [
-    "### Defining the Training Data"
+    "### Defining the Training Data\n",
+    "This is a fairly standard thing we'll do for logical operations. The input data `X` consists of all possible combinations of two binary inputs, and the output data `y` represents the result of the AND operation for each input pair.\n",
+    "\n",
+    "y is basically which inputs produce a 1 when ANDed together."
    ]
   },
   {
@@ -229,7 +232,8 @@
    "id": "267cc71e",
    "metadata": {},
    "source": [
-    "### Training & Testing the Perceptron"
+    "### Training & Testing the Perceptron\n",
+    "Again a standard procedure we'll be using throughout the lab. We create an instance of the Perceptron class, train it on the AND dataset, and then test its predictions on all possible input combinations."
    ]
   },
   {
@@ -295,7 +299,8 @@
    "id": "15f4f625",
    "metadata": {},
    "source": [
-    "### **Creating a plotting function**"
+    "### **Creating a plotting function**\n",
+    "To visualize the decision boundary of the perceptron as it learns, we can create a plotting function. This function will plot the input data points and the decision boundary based on the current weights and bias of the perceptron."
    ]
   },
   {
@@ -385,7 +390,10 @@
    "id": "720c4d4d",
    "metadata": {},
    "source": [
-    "### Animating the Learning Process"
+    "### Animating the Learning Process\n",
+    "To better understand how the perceptron learns over time, we can create an animation that shows the evolution of the decision boundary as the perceptron is trained. This involves updating the plot after each epoch of training to reflect the current state of the perceptron's weights and bias.\n",
+    "\n",
+    "Basically it just makes new graphs after each epoch to show how the decision boundary changes"
    ]
   },
   {
@@ -465,7 +473,8 @@
    "id": "abe8518b",
    "metadata": {},
    "source": [
-    "### Displaying Weight Updates Table"
+    "### Displaying Weight Updates Table\n",
+    "Another simple method to just show the weight updates after each epoch in a table format for clarity"
    ]
   },
   {
@@ -594,7 +603,7 @@
    "id": "ec6ecc95",
    "metadata": {},
    "source": [
-    "## **Exercise 3 - Train the Perceptron**"
+    "## **Exercise 3 - Train the Perceptron OR**"
    ]
   },
   {
@@ -602,7 +611,8 @@
    "id": "f60fbb80",
    "metadata": {},
    "source": [
-    "### Define Data, Train and Visualise"
+    "### Define Data, Train and Visualise\n",
+    "Like the title of the exercise says, we define the data for the OR operation, train the perceptron on this data, and visualize the learning process similarly to how we did for the AND operation."
    ]
   },
   {
@@ -854,7 +864,8 @@
    "id": "abcf5cf6",
    "metadata": {},
    "source": [
-    "### Comparing AND & OR Decision Boundaries"
+    "### Comparing AND & OR Decision Boundaries\n",
+    "This is another important step to visualize and compare how the decision boundaries differ between the AND and OR operations. By plotting both decision boundaries on the same graph, we can see how the perceptron adjusts its weights and bias to correctly classify the inputs for each logical operation."
    ]
   },
   {
@@ -921,6 +932,15 @@
    "metadata": {},
    "source": [
     "## **Exercise 4 - The XOR Problem - Demonstrating the Linear inseparability problem**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a39f533",
+   "metadata": {},
+   "source": [
+    "## **The Linear Inseparability Challenge**\n",
+    "This is a common problem in machine learning that highlights the limitations of single-layer perceptrons. The XOR function cannot be separated by a single straight line in a 2D space, which means a single-layer perceptron cannot learn this function."
    ]
   },
   {
@@ -999,6 +1019,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dfc0b22",
+   "metadata": {},
+   "source": [
+    "## Testing the Perceptron\n",
+    "A we've already discussed this procedure will fail because the XOR function is not linearly separable. The perceptron will not be able to find a set of weights and bias that correctly classifies all input combinations for the XOR operation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "e3d34e5a",
@@ -1040,6 +1069,14 @@
     "print(f\"Total incorrect predictions: {false_predictions} out of {total_predictions}\" + \" Accuracy: {:.2f}%\".format((total_predictions - false_predictions) / total_predictions * 100))\n",
     "\n",
     "print(\"⚠️ The perceptron CANNOT learn XOR with a single layer!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d322227",
+   "metadata": {},
+   "source": [
+    "## Representing the XOR Function"
    ]
   },
   {
