Lab 2 Exercise 1 - implementing the MLP class

--- a/Lab 2/Lab2.ipynb
+++ b/Lab 2/Lab2.ipynb
@@ -50,8 +50,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ca58f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLP class defined successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MLP:\n",
+    "    \"\"\"\n",
+    "    Multi-Layer Perceptron with one hidden layer.\n",
+    "    Uses sigmoid activation and backpropagation.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, n_inputs, n_hidden, n_outputs, learning_rate=0.1):\n",
+    "        \"\"\"\n",
+    "        Initialise the MLP.\n",
+    "\n",
+    "        Parameters:\n",
+    "        -----------\n",
+    "        n_inputs : int\n",
+    "        Number of input features\n",
+    "        n_hidden : int\n",
+    "        Number of hidden neurons\n",
+    "        n_outputs : int\n",
+    "        Number of output neurons\n",
+    "        learning_rate : float\n",
+    "        Learning rate for weight updates\n",
+    "        \"\"\"\n",
+    "        self.learning_rate = learning_rate\n",
+    "        # Input to hidden layer weights (weights_ih) and biases (bias_h)\n",
+    "        self.weights_ih = np.random.uniform(-0.5, 0.5, (n_inputs, n_hidden))\n",
+    "        self.bias_h = np.random.uniform(-0.5, 0.5, n_hidden)\n",
+    "\n",
+    "        # Hidden to output layer weights (weights_ho) and biases (bias_o)\n",
+    "        # TODO: add code here for weights_ho and bias_o\n",
+    "        ## Hint: see code for weights_ih and bias_h above\n",
+    "        self.weights_ho = np.random.uniform(-0.5, 0.5, (n_hidden, n_outputs))\n",
+    "        self.bias_o = np.random.uniform(-0.5, 0.5, n_outputs)\n",
+    "\n",
+    "    def sigmoid(self, x):\n",
+    "        \"\"\"Sigmoid activation function.\"\"\"\n",
+    "        # TODO: Implement sigmoid\n",
+    "        ## Hint: see Lab 1\n",
+    "        # Clip to avoid overflow in exp\n",
+    "        return 1 / (1 + np.exp(-np.clip(x, -500, 500)))\n",
+    "\n",
+    "    def sigmoid_derivative(self, x):\n",
+    "        \"\"\"Derivative of sigmoid: σ'(x) = σ(x) * (1 - σ(x)).\"\"\"\n",
+    "        # TODO: Implement sigmoid derivative\n",
+    "        ## Hint: see Lab 1\n",
+    "        s = self.sigmoid(x)\n",
+    "        return s * (1 - s)\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        \"\"\"\n",
+    "        Forward pass through the network.\n",
+    "\n",
+    "        Parameters:\n",
+    "        -----------\n",
+    "        X : array-like, shape (n_samples, n_inputs)\n",
+    "        Input data\n",
+    "\n",
+    "        Returns:\n",
+    "        --------\n",
+    "        array : Output activations\n",
+    "        \"\"\"\n",
+    "        # TODO: code this entire method\n",
+    "        ## Hint: see Lab 1\n",
+    "        # Input to hidden\n",
+    "        self.z_h = np.dot(X, self.weights_ih) + self.bias_h\n",
+    "        self.a_h = self.sigmoid(self.z_h)\n",
+    "\n",
+    "        # Hidden to output\n",
+    "        self.z_o = np.dot(self.a_h, self.weights_ho) + self.bias_o\n",
+    "        self.a_o = self.sigmoid(self.z_o)\n",
+    "\n",
+    "        return self.a_o\n",
+    "\n",
+    "    def backward(self, X, y):\n",
+    "        \"\"\"\n",
+    "        Backward pass (backpropagation).\n",
+    "\n",
+    "        Parameters:\n",
+    "        -----------\n",
+    "        X : array-like, shape (n_samples, n_inputs)\n",
+    "        Input data\n",
+    "        y : array-like, shape (n_samples, n_outputs)\n",
+    "        Target outputs\n",
+    "        \"\"\"\n",
+    "        # TODO: code this entire method\n",
+    "        ## Hint: see Lab 1\n",
+    "        m = X.shape[0] # Number of samples\n",
+    "\n",
+    "        # Output layer error\n",
+    "        output_error = y - self.a_o\n",
+    "        output_delta = output_error * self.sigmoid_derivative(self.z_o)\n",
+    "\n",
+    "        # Hidden layer error\n",
+    "        hidden_error = np.dot(output_delta, self.weights_ho.T)\n",
+    "        hidden_delta = hidden_error * self.sigmoid_derivative(self.z_h)\n",
+    "\n",
+    "        # Update weights and biases\n",
+    "        self.weights_ho += self.learning_rate * np.dot(self.a_h.T, output_delta) / m\n",
+    "        self.bias_o += self.learning_rate * np.mean(output_delta, axis=0)\n",
+    "\n",
+    "        self.weights_ih += self.learning_rate * np.dot(X.T, hidden_delta) / m\n",
+    "        self.bias_h += self.learning_rate * np.mean(hidden_delta, axis=0)\n",
+    "\n",
+    "    def train(self, X, y, epochs, verbose=True):\n",
+    "        \"\"\"\n",
+    "        Train the network.\n",
+    "\n",
+    "        Parameters:\n",
+    "        -----------\n",
+    "        X : array-like, shape (n_samples, n_inputs)\n",
+    "        Training inputs\n",
+    "        y : array-like, shape (n_samples, n_outputs)\n",
+    "        Training targets\n",
+    "        epochs : int\n",
+    "        Number of training epochs\n",
+    "        verbose : bool\n",
+    "        Print progress if True\n",
+    "\n",
+    "        Returns:\n",
+    "        --------\n",
+    "        list : Training loss history\n",
+    "        \"\"\"\n",
+    "        losses = []\n",
+    "\n",
+    "        for epoch in range(epochs):\n",
+    "            # Forward pass\n",
+    "            output = self.forward(X)\n",
+    "\n",
+    "            # Compute loss (Mean Squared Error)\n",
+    "            loss = np.mean((y - output) ** 2)\n",
+    "            losses.append(loss)\n",
+    "\n",
+    "            # Backward pass\n",
+    "            self.backward(X, y)\n",
+    "\n",
+    "            if verbose and (epoch % 100 == 0 or epoch == epochs - 1):\n",
+    "                print(f\"Epoch {epoch}: Loss = {loss:.6f}\")\n",
+    "\n",
+    "        return losses\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        \"\"\"\n",
+    "        Make predictions.\n",
+    "\n",
+    "        Returns the class with highest output activation.\n",
+    "        \"\"\"\n",
+    "        output = self.forward(X)\n",
+    "        return np.argmax(output, axis=1)\n",
+    "\n",
+    "print(\"MLP class defined successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b67e4131",
    "metadata": {},
    "outputs": [],
    "source": []
