Added more comments actoss the file for better explanations and started exercise 4 - training the mlp on iris

--- a/Lab 2/Lab2.ipynb
+++ b/Lab 2/Lab2.ipynb
@@ -45,7 +45,10 @@
    "id": "a58defb3",
    "metadata": {},
    "source": [
-    "## **Exercise 1 - Implementing an MLP Class**"
+    "## **Exercise 1 - Implementing an MLP Class**\n",
+    "Similar enough in function mainly to last weeks perceptron class. Has some of the exact same methods too just copy pasted over for this one. Two of the most noteable methods include:\n",
+    "- `train`: Which like the name suggests just trains this MLP\n",
+    "- `predict`: Meant to predict values/outputs based on the provided values"
    ]
   },
   {
@@ -218,7 +221,8 @@
    "id": "3909ef34",
    "metadata": {},
    "source": [
-    "## **Exercise 2 - Testing the MLP on XOR**"
+    "## **Exercise 2 - Testing the MLP on XOR**\n",
+    "Before we continue we check to see if it will work on the multi planer XOR from lab 1."
    ]
   },
   {
@@ -293,7 +297,11 @@
    "id": "120f9c2c",
    "metadata": {},
    "source": [
-    "## **Exercise 3 - Loading and Preparing the Iris dataset**"
+    "## **Exercise 3 - Loading and Preparing the Iris dataset**\n",
+    "\n",
+    "The Iris dataset contains 150 samples of iris flowers with:\n",
+    "- 4 features: sepal length, sepal width, petal length, petal width\n",
+    "- 3 classes: Setosa, Versicolor, Virginica"
    ]
   },
   {
@@ -301,7 +309,11 @@
    "id": "05793596",
    "metadata": {},
    "source": [
-    "### 3.1 Loading and Exploring the Data"
+    "### 3.1 Loading and Exploring the Data\n",
+    "\n",
+    "**NOTE:** we get the iris data set from the sklearn import.\n",
+    "\n",
+    "We can extract various pieces of information from simply loading in the iris data such as the data itself or the target values"
    ]
   },
   {
@@ -345,7 +357,9 @@
    "id": "540d9fc2",
    "metadata": {},
    "source": [
-    "### 3.2 Normalising the Data"
+    "### 3.2 Normalising the Data\n",
+    "\n",
+    "To ensure a better neural network performance we normalise the data to [0, 1]"
    ]
   },
   {
@@ -389,7 +403,14 @@
    "id": "c468cacd",
    "metadata": {},
    "source": [
-    "### 3.3 One Hot Endcode the targets"
+    "### 3.3 One Hot Endcode the targets\n",
+    "\n",
+    "For multi-class classification with neural networks, we convert class labels to one-hot encoding:\n",
+    "- Class 0 → [1, 0, 0]\n",
+    "- Class 1 → [0, 1, 0]\n",
+    "- Class 2 → [0, 0, 1]\n",
+    "\n",
+    "One Hot Encoding is a method for converting categorical variables into a binary format. It creates new columns for each category where 1 means the category is present and 0 means it is not. The primary purpose of One Hot Encoding is to ensure that categorical data can be effectively used in machine learning models."
    ]
   },
   {
@@ -479,8 +500,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e37733e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training MLP on Iris dataset...\n",
+      "==================================================\n",
+      "Epoch 0: Loss = 0.245520\n",
+      "Epoch 100: Loss = 0.212343\n",
+      "Epoch 200: Loss = 0.192939\n",
+      "Epoch 300: Loss = 0.160408\n",
+      "Epoch 400: Loss = 0.134717\n",
+      "Epoch 500: Loss = 0.121064\n",
+      "Epoch 600: Loss = 0.113445\n",
+      "Epoch 700: Loss = 0.108393\n",
+      "Epoch 800: Loss = 0.104507\n",
+      "Epoch 900: Loss = 0.101203\n",
+      "Epoch 999: Loss = 0.098243\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "# Create MLP: 4 inputs, 8 hidden, 3 outputs, learning rate = 0.5\n",
+    "# TODO: add code here to create MLP\n",
+    "## Hint: see Exercise 2\n",
+    "#Simple enough, its the method we call to simply create the MLP like a constructor\n",
+    "mlp_iris = MLP(n_inputs=4, n_hidden=8, n_outputs=3, learning_rate=0.5)\n",
+    "\n",
+    "print(\"Training MLP on Iris dataset...\")\n",
+    "print(\"=\" * 50)\n",
+    "# Train\n",
+    "losses_iris = mlp_iris.train(X_train, y_train, epochs=1000, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dd782ff",
    "metadata": {},
    "outputs": [],
    "source": []
