Added summary section to the top of the page

--- a/Lab 3/Lab3.ipynb
+++ b/Lab 3/Lab3.ipynb
@@ -32,6 +32,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e560806",
+   "metadata": {},
+   "source": [
+    "## **Summary**\n",
+    "In this self-study notebook, you'll learn:\n",
+    "\n",
+    "1. **RBF Architecture**: Three layers (input → RBF hidden → output) with Gaussian activation\n",
+    "2. **Key Concepts**:\n",
+    "   - **Prototypes**: Training samples stored by RBF neurons\n",
+    "   - **Gaussian activation**: φ(x) = exp(-β||x-p||²)\n",
+    "   - **β parameter**: Controls width of Gaussian response\n",
+    "   - **Local response**: Neurons only activate for nearby inputs\n",
+    "3. **Training Process**:\n",
+    "   - Stage 1: Select prototypes (k-means clustering)\n",
+    "   - Stage 2: Compute β values (from cluster spread)\n",
+    "   - Stage 3: Learn output weights (pseudoinverse)\n",
+    "4. **Comparison with MLP**:\n",
+    "   - RBF uses local Gaussian activation; MLP uses global sigmoid\n",
+    "   - RBF training is faster (no iterative backpropagation)\n",
+    "   - RBF is more interpretable (prototypes are actual data points)\n",
+    "5. **sklearn Alternatives**:\n",
+    "   - SVC with RBF kernel\n",
+    "   - RBFSampler for explicit RBF features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "59fbd835",
